# dotfiles

./: .gitignore  README.md  TODO.md  bash_aliases  gitconfig.symlink  install.py  tmux.conf
bash/: aliases_bat.bash  aliases_exa.bash  aliases_eza.bash  bash_aliases.bash
claude/: claude__CLAUDE.md.symlink  claude__RTK.md.symlink  claude__hooks__sudo-guard.sh.symlink  claude__rules__python.md.symlink  claude__settings.json.symlink  claude__skills__caveman__SKILL.md.symlink  claude__skills__tracked_development__SKILL.md.symlink
claude/claude__skills__caveman.symlink/: SKILL.md
claude/claude__skills__concert-study-sheet.symlink/: SKILL.md
claude/claude__skills__simplicity-review.symlink/: SKILL.md
claude/claude__skills__skillify.symlink/: SKILL.md
claude/claude__skills__sudo-handoff.symlink/: SKILL.md
claude/claude__skills__tracked-development.symlink/: SKILL.md
git/: README.md  aliases.bash  git_askpass_helper.sh  gitconfig.symlink  remote_swap.bash  repos_check.bash  repos_folder_list.txt  repos_single_list.txt
install/: install.py  pyproject.toml
install/tests/: test_install.py
latex/: latexmkrc.symlink
mime/: README.md
plans/: 00-feat-anti-superficiality-rules.md  03-feat-sudo-handoff.md  04-git-remote-swap.md
rtk/: config__rtk__config.toml.symlink
teamocil.symlink/: README.md  appunti.yml  completion.bash  ros_arena.yml
tmux/: README.md  aliases.bash  completion.bash  tmux.conf.symlink
vim/: vimrc
vim.symlink/: .gitignore  .ycm_extra_conf.py  README.md  completion.bash  gvimrc  vim-latex.md  vimrc
vim.symlink/UltiSnips/: go.snippets  (+1 more)
(+39 files in other folders)
